<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoApp"
    tools:context=".TwoActivities">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/datos_ingresados"
            android:textAlignment="center" />


        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:text="@string/nombre" />

        <TextView
            android:id="@+id/get_nombre"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:contextClickable="false"
            android:ems="10"
            android:isScrollContainer="false"
            android:text="@string/nombre_ingresado"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apellido" />

        <TextView
            android:id="@+id/get_apellido"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:ems="10"
            android:text="@string/apellido_ingresado" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <TextView
            android:id="@+id/get_email"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:autofillHints="@string/email_ingresado"
            android:ems="10"
            android:hint="@string/email_ingresado"
            android:text="@string/email_ingresado"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <TextView
            android:id="@+id/get_password"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:autofillHints="@string/password_ingresada"
            android:ems="10"
            android:text="@string/password_ingresada"
            android:textColor="#000000"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/btnvolver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="20dp"
            android:onClick="volver"
            android:text="@string/btn_volver" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>